Replace in.tftp with dnsmasq, to add support for single-port TFTP

--- a/root/etc/supervisor.conf
+++ b/root/etc/supervisor.conf
@@ -21,8 +21,8 @@ user=nbxyz
 directory=/app
 priority = 3
 
-[program:in.tftpd]
-command=/usr/sbin/in.tftpd -Lvvv --user nbxyz --secure %(ENV_TFTPD_OPTS)s /config/menus
+[program:dnsmasq]
+command=/usr/sbin/dnsmasq --port=0 --keep-in-foreground --enable-tftp --user=nbxyz --tftp-secure --tftp-root=/config/menus %(ENV_TFTPD_OPTS)s
 stdout_logfile=/config/tftpd.log
 redirect_stderr=true
 priority = 4
